--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
   </div>
 </section>
 
-<!-- PORTFOLIO -->
-<section id="portfolio" class="py-32 max-w-7xl mx-auto px-6">
+
+ <!-- PORTFOLIO -->
+<section id="portfolio" class="py-24 md:py-32 max-w-7xl mx-auto px-4 sm:px-6">
 
   <!-- TÍTULO GENERAL -->
   <h2 class="font-serif text-4xl md:text-5xl mb-6 text-center opacity-0 animate-on-scroll">
@@ -132,92 +133,122 @@
 
   <div class="section-divider opacity-0 animate-on-scroll delay-100"></div>
 
-  <!-- ================= FAMILIAS & BOOKS ================= -->
-  <div class="mb-48">
+  <!-- ================= FAMILIAS & NIÑOS ================= -->
+<div class="mb-32 md:mb-48">
 
-    <h3 class="font-serif text-3xl md:text-4xl mb-16 text-center opacity-0 animate-on-scroll">
-      Familias & Niños
-    </h3>
+  <h3 class="font-serif text-3xl md:text-4xl mb-12 md:mb-16 text-center opacity-0 animate-on-scroll">
+    Familias & Niños
+  </h3>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-10">
 
-      <div class="image-hover h-72 md:h-96 opacity-0 animate-on-scroll delay-100">
-        <img src="niño1.jpg"
-            alt="Fotografía familiar niño" 
-            class="w-full h-full object-cover">
-      </div>
-
-      <div class="image-hover h-80 md:h-[28rem] opacity-0 animate-on-scroll delay-200">
-        <img src="niño2.jpg"
-            alt="Book fotográfico infantil" 
-            class="w-full h-full object-cover">
-      </div>
-
-      <div class="image-hover h-72 md:h-96 opacity-0 animate-on-scroll delay-300">
-        <img src="niño3.jpg"
-            alt="Retrato editorial infantil" 
-            class="w-full h-full object-cover">
-      </div>
-
-
+    <!-- Imagen 1 -->
+    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-96 opacity-0 animate-on-scroll delay-100 overflow-hidden">
+      <img
+        src="niño1.jpg"
+        alt="Fotografía familiar niño"
+        loading="lazy"
+        class="w-full h-full object-cover"
+      >
     </div>
+
+    <!-- Imagen 2 -->
+    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-[28rem] opacity-0 animate-on-scroll delay-200 overflow-hidden">
+      <img
+        src="niño2.jpg"
+        alt="Book fotográfico infantil"
+        loading="lazy"
+        class="w-full h-full object-cover"
+      >
+    </div>
+
+    <!-- Imagen 3 -->
+    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-96 opacity-0 animate-on-scroll delay-300 overflow-hidden">
+      <img
+        src="niño3.jpg"
+        alt="Retrato editorial infantil"
+        loading="lazy"
+        class="w-full h-full object-cover"
+      >
+    </div>
+
+  </div>
+</div>
+
+
+  <!-- ================= MARCAS / FOTOGRAFÍA ================= -->
+<div class="mb-28 md:mb-36">
+
+  <div class="subtitle-line mb-10 md:mb-12 opacity-0 animate-on-scroll">
+    <h4 class="text-xs tracking-[0.45em] uppercase text-neutral-500">
+      Fotografía
+    </h4>
   </div>
 
-  <!-- ================= MARCAS ================= -->
-  <div>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-10">
 
-    <h3 class="font-serif text-3xl md:text-4xl mb-24 text-center opacity-0 animate-on-scroll">
-      Marcas
-    </h3>
-
-    <!-- FOTOGRAFÍA -->
-    <div class="mb-36">
-
-      <div class="subtitle-line mb-12 opacity-0 animate-on-scroll">
-        <h4 class="text-xs tracking-[0.45em] uppercase text-neutral-500">
-          Fotografía
-        </h4>
-      </div>
-
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
-
-        <div class="image-hover h-80 md:h-96 opacity-0 animate-on-scroll delay-100">
-          <img src="marcas1.jpg"
-               alt="Fotografía de producto" class="w-full h-full object-cover">
-        </div>
-
-        <div class="image-hover h-72 md:h-80 opacity-0 animate-on-scroll delay-200">
-          <img src="marcas2.jpg"
-               alt="Fotografía de marca" class="w-full h-full object-cover">
-        </div>
-
-        <div class="image-hover h-80 md:h-96 opacity-0 animate-on-scroll delay-300">
-          <img src="marcas3.jpg"
-               alt="Editorial de marca" class="w-full h-full object-cover">
-        </div>
-
-      </div>
+    <!-- Imagen 1 -->
+    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-96 opacity-0 animate-on-scroll delay-100 overflow-hidden">
+      <img
+        src="marcas1.jpg"
+        alt="Fotografía de producto"
+        loading="lazy"
+        class="w-full h-full object-cover"
+      >
     </div>
+
+    <!-- Imagen 2 -->
+    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-80 opacity-0 animate-on-scroll delay-200 overflow-hidden">
+      <img
+        src="marcas2.jpg"
+        alt="Fotografía de marca"
+        loading="lazy"
+        class="w-full h-full object-cover"
+      >
+    </div>
+
+    <!-- Imagen 3 -->
+    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-96 opacity-0 animate-on-scroll delay-300 overflow-hidden">
+      <img
+        src="marcas3.jpg"
+        alt="Editorial de marca"
+        loading="lazy"
+        class="w-full h-full object-cover"
+      >
+    </div>
+
+  </div>
+</div>
+
 
     <!-- CONTENIDO VISUAL -->
     <div>
 
-      <div class="subtitle-line mb-12 opacity-0 animate-on-scroll">
+      <div class="subtitle-line mb-10 md:mb-12 opacity-0 animate-on-scroll">
         <h4 class="text-xs tracking-[0.45em] uppercase text-neutral-500">
           Contenido visual
         </h4>
       </div>
 
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 md:gap-12">
 
-        <div class="aspect-[9/16] bg-black opacity-0 animate-on-scroll delay-100 hover-lift">
-          <video class="w-full h-full object-cover" autoplay muted loop playsinline>
+        <!-- Video -->
+        <div class="aspect-[9/16] bg-black opacity-0 animate-on-scroll delay-100">
+          <video class="w-full h-full object-cover"
+                 controls
+                 preload="none"
+                 playsinline
+                 poster="marcasvideo1.jpg">
             <source src="marcasvideo1.mp4" type="video/mp4">
           </video>
         </div>
 
-        <div class="aspect-[9/16] bg-black opacity-0 animate-on-scroll delay-200 hover-lift">
-          <video class="w-full h-full object-cover" autoplay muted loop playsinline>
+        <div class="aspect-[9/16] bg-black opacity-0 animate-on-scroll delay-200">
+          <video class="w-full h-full object-cover"
+                 controls
+                 preload="none"
+                 playsinline
+                 poster="marcasvideo2.jpg">
             <source src="marcasvideo2.mp4" type="video/mp4">
           </video>
         </div>
@@ -227,6 +258,7 @@
 
   </div>
 </section>
+
 
 
 <!-- ================= CONTACTO ================= -->
