--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   <div class="section-divider opacity-0 animate-on-scroll delay-100"></div>
 
-  <!-- ================= FAMILIAS & NIÑOS ================= -->
+ <!-- ================= FAMILIAS & NIÑOS ================= -->
 <div class="mb-32 md:mb-48">
 
   <h3 class="font-serif text-3xl md:text-4xl mb-12 md:mb-16 text-center opacity-0 animate-on-scroll">
@@ -138,32 +138,35 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-10">
 
     <!-- Imagen 1 -->
-    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-96 opacity-0 animate-on-scroll delay-100 overflow-hidden">
+    <div class="image-hover aspect-[4/5] bg-neutral-100 flex items-center justify-center opacity-0 animate-on-scroll delay-100">
       <img
         src="niño1.jpg"
         alt="Fotografía familiar niño"
         loading="lazy"
-        class="w-full h-full object-cover"
+        decoding="async"
+        class="max-h-full max-w-full object-contain"
       >
     </div>
 
     <!-- Imagen 2 -->
-    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-[28rem] opacity-0 animate-on-scroll delay-200 overflow-hidden">
+    <div class="image-hover aspect-[4/5] bg-neutral-100 flex items-center justify-center opacity-0 animate-on-scroll delay-200">
       <img
         src="niño2.jpg"
         alt="Book fotográfico infantil"
         loading="lazy"
-        class="w-full h-full object-cover"
+        decoding="async"
+        class="max-h-full max-w-full object-contain"
       >
     </div>
 
     <!-- Imagen 3 -->
-    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-96 opacity-0 animate-on-scroll delay-300 overflow-hidden">
+    <div class="image-hover aspect-[4/5] bg-neutral-100 flex items-center justify-center opacity-0 animate-on-scroll delay-300">
       <img
         src="niño3.jpg"
         alt="Retrato editorial infantil"
         loading="lazy"
-        class="w-full h-full object-cover"
+        decoding="async"
+        class="max-h-full max-w-full object-contain"
       >
     </div>
 
@@ -171,7 +174,9 @@
 </div>
 
 
+
   <!-- ================= MARCAS / FOTOGRAFÍA ================= -->
+<!-- ================= MARCAS / FOTOGRAFÍA ================= -->
 <div class="mb-28 md:mb-36">
 
   <div class="subtitle-line mb-10 md:mb-12 opacity-0 animate-on-scroll">
@@ -183,37 +188,41 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-10">
 
     <!-- Imagen 1 -->
-    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-96 opacity-0 animate-on-scroll delay-100 overflow-hidden">
+    <div class="image-hover aspect-[4/5] bg-neutral-100 flex items-center justify-center opacity-0 animate-on-scroll delay-100">
       <img
         src="marcas1.jpg"
         alt="Fotografía de producto"
         loading="lazy"
-        class="w-full h-full object-cover"
+        decoding="async"
+        class="max-h-full max-w-full object-contain"
       >
     </div>
 
     <!-- Imagen 2 -->
-    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-80 opacity-0 animate-on-scroll delay-200 overflow-hidden">
+    <div class="image-hover aspect-[4/5] bg-neutral-100 flex items-center justify-center opacity-0 animate-on-scroll delay-200">
       <img
         src="marcas2.jpg"
         alt="Fotografía de marca"
         loading="lazy"
-        class="w-full h-full object-cover"
+        decoding="async"
+        class="max-h-full max-w-full object-contain"
       >
     </div>
 
     <!-- Imagen 3 -->
-    <div class="image-hover aspect-[4/5] sm:aspect-auto sm:h-96 opacity-0 animate-on-scroll delay-300 overflow-hidden">
+    <div class="image-hover aspect-[4/5] bg-neutral-100 flex items-center justify-center opacity-0 animate-on-scroll delay-300">
       <img
         src="marcas3.jpg"
         alt="Editorial de marca"
         loading="lazy"
-        class="w-full h-full object-cover"
+        decoding="async"
+        class="max-h-full max-w-full object-contain"
       >
     </div>
 
   </div>
 </div>
+
 
 
     <!-- CONTENIDO VISUAL -->
