--- a/index.html
+++ b/index.html
@@ -175,9 +175,13 @@
 
 
 
-  <!-- ================= MARCAS / FOTOGRAFÍA ================= -->
+
 <!-- ================= MARCAS / FOTOGRAFÍA ================= -->
 <div class="mb-28 md:mb-36">
+
+    <h3 class="font-serif text-3xl md:text-4xl mb-12 md:mb-16 text-center opacity-0 animate-on-scroll">
+    Marcas
+  </h3>
 
   <div class="subtitle-line mb-10 md:mb-12 opacity-0 animate-on-scroll">
     <h4 class="text-xs tracking-[0.45em] uppercase text-neutral-500">
